Juke Router commit End

--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "pg-native": "^1.10.0",
+    "rc-switch": "^1.5.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-router-component": "^0.37.0",
     "react-router-dom": "^4.1.1",
     "request": "^2.74.0",
     "sequelize": "^3.24.1",
